# collectd-pandas

./: .gitignore  .project  .pydevproject  ChangeLog  README.md  Vagrantfile  pylint.rc  setup.cfg  setup.py  tox.ini
ansible/: playbook.yml
collectd_pandas/: logger.py  plugin.py
collectd_pandas/tests/: match.py  mocking.py
collectd_pandas/tests/func/: __main__.py  base.py  main.py  runner.py  test_plugin.py
collectd_pandas/tests/unit/: __init__.py  test_logger.py  test_plugin.py
