[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[metadata]
name = collectd-pandas
summary = Collectd plugin that integrates Pandas for data analysis.
description-file =
    README.md
author = Federico Ressi
author-email = federico.ressi@gmail.com
home-page = https://github.com/FedericoRessi/collectd-pandas
classifier =
    Development Status :: 1 - Planning
    Environment :: Plugins
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: Unix
    Programming Language :: Python
    Topic :: System :: Systems Administration

[files]
packages =
    collectd_pandas

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1

[upload_sphinx]
upload-dir = docs/build/html

[extract_messages]
keywords = collectd python data analysys

[pytest]
norecursedirs = .git docs htmlcov collectd_pandas.egg-info .settings
python_files=test_*.py
python_classes=Test*
python_functions=test_*
